--- a/Cabbages.rmd
+++ b/Cabbages.rmd
@@ -35,6 +35,13 @@ veggy <- cabbages
 
 <!--Graphical results here.  Make sure to show your code.  Provide appropriate labels for axes, giving units if possible, and provide a good title for the graph, too.  Use the graphical results to describe the patterns if any that exist in the data as focused toward the research question!-->
 
+```{r}
+boxplot(VitC~Cult,data=veggy)
+```
+  
+    
+  The box plot shows that c39 is positioned below c52. The bottom of box c52 is higher up than the box c39. If I moved them into the same column, they wouldn't bump into each other, they're disjoint. If I took box c52 and slid it over to the left to be next to the box c39, they wouldn't bump into each other. Box c52 is taller than box c39.  
+
 ### Numerical Descriptive Results
 
 <!--Numerical results go here. Use the numerical results to describe the patterns if any that exist in the data as focused toward the research question!-->
