--- a/Cabbages.rmd
+++ b/Cabbages.rmd
@@ -51,13 +51,22 @@ favstats(VitC~Cult,data=veggy)
 ```
   
 The third quartile of c39 is 54.75 and the first quartile of c52 is 56.  
-The average of c39 is 51.5 and the average amount of c52 is 64.4.   
+The average of c39 is 51.5 and the average amount of c52 is 64.4.  
   
 ## Inferential Results
 
 <!--State hypothesis clearly.  Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc.  Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
 
 
+```{r}
+t.test(VitC~Cult,data=veggy)
+```
+  
+0.00000003405
+  
 # Discussion and Conclusion
 
 <!--Discussion and conclusion here.  If you found a relationship be sure to consider whether the relationship occurs because one of the variavbles causes the other, or whether they perhasps are related for some other reason.  Watch the chapter 6 videos from the GeorgeTown videos collection.!-->
+
+First we have to figure out what kind of data we are looking at. The first problem was determined to be a numerical/categorical data. We input the code to get the box plot. We then looked at the second set of data and decided it was numerical data. We input the code and realized that the third quartile of c39 is 54.75 and the first quartile of c52 is 56.  The average of c39 is 51.5 and the average amount of c52 is 64.4.  
+    
